--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -20,6 +20,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <script defer src="https://unpkg.com/joi@17.6.0/dist/joi-browser.min.js"></script>
+
     <link rel="stylesheet" href="../../css/style.css" />
     <link rel="stylesheet" href="../../css/admin.css" />
 
@@ -27,12 +29,6 @@
 
     <script defer src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
 
-    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-    <script
-      defer
-      src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.min.js"
-    ></script>
-
-    <script type="module" src="../../js/main.js" defer></script>
+    <!-- <script type="module" src="../../js/main.js" defer></script> -->
   </head>
 </html>
