up dated view create

--- a/src/views/admin/posts/create.ejs
+++ b/src/views/admin/posts/create.ejs
@@ -127,7 +127,7 @@
               <label for="phone" class="col-md-12 col-form-label">Thông tin liên hệ</label>
               <div class="col-md-6">
                 <div class="input-group mb-3">
-                  <input type="text" class="form-control" readonly value="<%= user?.username %>" />
+                  <input type="text" class="form-control" readonly value="" />
                   <div class="invalid-feedback">demo</div>
                 </div>
               </div>
@@ -136,12 +136,7 @@
               <label for="phone" class="col-md-12 col-form-label">Điện thoại</label>
               <div class="col-md-6">
                 <div class="input-group mb-3">
-                  <input
-                    type="number"
-                    class="form-control"
-                    readonly="readonly"
-                    value="<%= user?.phone %>"
-                  />
+                  <input type="number" class="form-control" readonly="readonly" value="" />
                   <div class="invalid-feedback">demo</div>
                 </div>
               </div>
