--- a/src/views/signIn.ejs
+++ b/src/views/signIn.ejs
@@ -23,6 +23,7 @@
                   placeholder="Enter a valid email address"
                   name="email"
                 />
+                <!-- error -->
               </div>
 
               <!-- Password input -->
