--- a/src/views/partials/sidebar.ejs
+++ b/src/views/partials/sidebar.ejs
@@ -10,7 +10,9 @@
     />
   </div>
   <div class="col-md-8">
-    <h5 class="card-title text-primary fs-6"><%- element.title %></h5>
+    <h5 class="card-title text-primary fs-6 text-truncate">
+      <%- element.title %>
+    </h5>
     <div class="card-rate">
       <% if (element.isvip === "vip3") { %>
       <div class="text-danger">
