--- a/src/views/admin/posts/index.ejs
+++ b/src/views/admin/posts/index.ejs
@@ -61,7 +61,7 @@
               <a class="dropdown-item">Tin đang ẩn</a>
             </div>
           </div>
-          <a href="posts/create" class="btn btn-danger btn-sm">Đăng tin mới</a>
+          <a href="posts/add-edit" class="btn btn-danger btn-sm">Đăng tin mới</a>
           <!-- <div class="d-lg-none w-100">
                 <a class="btn btn-danger btn-block mt-3">Đăng tin mới</a>
               </div> -->
@@ -78,40 +78,36 @@
                 <th style="text-align: center; white-space: nowrap">Ảnh đại diện</th>
                 <th>Tiêu đề</th>
                 <th>Giá</th>
-                <th style="white-space: nowrap">Ngày bắt đầu</th>
-                <th style="white-space: nowrap">Ngày hết hạn</th>
+                <th style="white-space: nowrap">Ngày tạo</th>
                 <th style="white-space: nowrap">Trạng thái</th>
               </tr>
             </thead>
-            <tbody>
-              <tr>
-                <td>aaaa></td>
-                <td>
-                  <img
-                    style="width: 70px; height: 70px; object-fit: cover"
-                    src=""
-                    class="img-thumbnail"
-                  />
-                </td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-              </tr>
-
-              <tr>
-                <td colspan="7">
-                  Bạn chưa có tin đăng nào. Bấm
-                  <a href="#">vào đây</a> để bắt đầu đăng tin
-                </td>
-              </tr>
-            </tbody>
+            <tbody id="postList"></tbody>
           </table>
         </div>
 
         <!-- end pagination -->
       </div>
+      <nav>
+        <ul id="pagination" class="pagination justify-content-center"></ul>
+      </nav>
     </main>
   </div>
 </div>
+<template id="postTemplate">
+  <tr id="postItem">
+    <td data-id="number">Mã tin</td>
+    <td data-id="image">
+      <img style="width: 70px; height: 70px; object-fit: cover" src="" class="img-thumbnail" />
+    </td>
+    <td data-id="title"></td>
+    <td data-id="price"></td>
+    <td data-id="date"></td>
+    <td data-id="action">
+      <button id="edit-btn" type="button" class="btn btn-sm btn-success">Edit</button>
+      <button id="remove-btn" type="button" class="btn btn-sm btn-danger">Remove</button>
+    </td>
+  </tr>
+</template>
+<script type="module" src="../../../js/post-list.js"></script>
 <%- include('../../partials/footerPanel'); %>
