--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title><%= title %></title>
-    <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <!-- <script src="
+    https://cdn.jsdelivr.net/npm/jwt-decode@3.1.2/build/jwt-decode.min.js
+    "></script> -->
+    <script src="https://unpkg.com/joi@17.6.0/dist/joi-browser.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
+    <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
+    <script defer type="module" src="../../js/authentication.js"></script>
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="
+https://cdn.jsdelivr.net/npm/sweetalert2@11.7.3/dist/sweetalert2.min.css
+"
+      rel="stylesheet"
+    />
     <!-- Bootstrap CSS v5.2.1 -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
@@ -20,15 +35,10 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <script defer src="https://unpkg.com/joi@17.6.0/dist/joi-browser.min.js"></script>
 
     <link rel="stylesheet" href="../../css/style.css" />
     <link rel="stylesheet" href="../../css/admin.css" />
 
     <!-- axios -->
-
-    <script defer src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
-
-    <!-- <script type="module" src="../../js/main.js" defer></script> -->
   </head>
 </html>
