--- a/src/views/partials/post.ejs
+++ b/src/views/partials/post.ejs
@@ -1,5 +1,105 @@
-<div class="post-list"></div>
+<div class="post-list">
+  <% posts.forEach(function(post) { %>
+  <div class="row bg-white rounded-3 p-3 mt-2">
+    <div class="col-md-4">
+      <img
+        src="<%= post.images[0] %>"
+        class="card-img-top rounded-3"
+        alt="..."
+        style="height: 200px; object-fit: cover"
+      />
+    </div>
+    <div class="col-md-8">
+      <a
+        href="/details/<%= post.id %>"
+        class="card-title text-capitalize text-decoration-none fs-5 text-primary mt-2"
+        ><%= post.title %></a
+      >
+      <div class="card-rate">
+        <!-- nếu post.isvip === "vip3" thì hiển thị 5 sao -->
+
+        <% if (post.isvip === "vip3") { %>
+        <div class="text-danger">
+          <i class="fa fas fa-star"></i>
+          <i class="fa fas fa-star"></i>
+          <i class="fa fas fa-star"></i>
+          <i class="fa fas fa-star"></i>
+          <i class="fa fas fa-star"></i>
+        </div>
+        <% } %>
+        <!-- nếu post.isvip === "vip2" thì hiển thị 4 sao -->
+        <% if (post.isvip === "vip2") { %>
+        <div style="color: #ff8b13">
+          <i class="fa fas fa-star"></i>
+          <i class="fa fas fa-star"></i>
+          <i class="fa fas fa-star"></i>
+          <i class="fa fas fa-star"></i>
+        </div>
+        <% } %>
+        <!-- nếu post.isvip === "vip1" thì hiển thị 3 sao -->
+        <% if (post.isvip === "vip1") { %>
+        <div class="text-warning">
+          <i class="fa fas fa-star"></i>
+          <i class="fa fas fa-star"></i>
+          <i class="fa fas fa-star"></i>
+        </div>
+        <% } %>
+        <!-- nếu post.isvip === "vip0" thì không có sao -->
+        <% if (post.isvip === "vip0") { %>
+        <i class="fas fa fa-star text-warning"></i>
+        <% } %>
+      </div>
+      <p class="text-muted"><%= post.address%></p>
+      <p class="card-price text-success">
+        <%= post.price.toLocaleString('vi-VN', { style: 'currency', currency:
+        'VND' }) %><span>/Tháng</span>
+      </p>
+      <p class="card-text text-muted text-truncate">
+        <?= post.description ?>
+      </p>
+      <a href="#" class="btn btn-success"><%= post.phone %></a>
+      <a href="#" class="btn btn-primary">Zalo</a>
+    </div>
+  </div>
+  <% }); %>
+</div>
 <!-- pagi -->
 <nav aria-label="Page navigation example">
-  <ul class="pagination mt-5"></ul>
+  <ul class="pagination mt-5">
+    <% if (category_id) { %> <% if (page > 1) { %>
+    <li class="page-item">
+      <a
+        class="page-link"
+        href="/category/<%= category_id %>/?page=<%= page - 1 %>"
+        >Previous</a
+      >
+    </li>
+    <% } %> <% for (let i = 1; i <= totalPage; i++) { %>
+    <li class="page-item <%= i === page ? 'active' : '' %>">
+      <a class="page-link" href="/category/<%= category_id %>/?page=<%= i %>"
+        ><%= i %></a
+      >
+    </li>
+    <% } %> <% if (page < totalPage) { %>
+    <li class="page-item">
+      <a
+        class="page-link"
+        href="/category/<%= category_id %>/?page=<%= page + 1 %>"
+        >Next</a
+      >
+    </li>
+    <% } %> <% } else { %> <% if (page > 1) { %>
+    <li class="page-item">
+      <a class="page-link" href="/?page=<%= page - 1 %>">Previous</a>
+    </li>
+    <% } %> <% for (let i = 1; i <= totalPage; i++) { %>
+    <li class="page-item <%= i === page ? 'active' : '' %>">
+      <a class="page-link" href="/?page=<%= i %>"><%= i %></a>
+    </li>
+    <% } %> <% if (page < totalPage) { %>
+    <li class="page-item">
+      <a class="page-link" href="/?page=<%= page + 1 %>">Next</a>
+    </li>
+    <% } %> <% } %>
+  </ul>
 </nav>
