--- a/src/views/partials/sidebarPanel.ejs
+++ b/src/views/partials/sidebarPanel.ejs
@@ -208,7 +208,7 @@
 </nav>
 <template id="navbarTemplate">
   <li class="nav-item" id="navItemMyPosts">
-    <a class="nav-link active text-dark fw-bold" href="#">
+    <a class="nav-link active text-dark fw-bold" href="http://localhost:5000/posts/">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         width="16"
@@ -327,7 +327,7 @@
     </a>
   </li>
   <li class="nav-item" id="navItemPackageManagement">
-    <a class="nav-link text-dark" href="#">
+    <a class="nav-link text-dark" href="http://localhost:5000/packages/">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         width="16"
