--- a/src/views/admin/packages/index.ejs
+++ b/src/views/admin/packages/index.ejs
@@ -15,14 +15,14 @@
         <ol class="breadcrumb mb-0">
           <li class="breadcrumb-item"><a href="#">Phongtro123.com </a></li>
           <li class="breadcrumb-item"><a href="#">Quản lí</a></li>
-          <li class="breadcrumb-item active">Danh sách tin đăng</li>
+          <li class="breadcrumb-item active">Danh gói tin</li>
         </ol>
       </nav>
 
       <div
         class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom"
       >
-        <h3 class="h3">Quản lý tin đăng</h3>
+        <h3 class="h3">Quản lý gói tin</h3>
 
         <div class="btn-toolbar mb-2 mb-md-0">
           <div class="dropdown me-1">
@@ -61,27 +61,31 @@
               <a class="dropdown-item">Tin đang ẩn</a>
             </div>
           </div>
-          <a href="posts/add-edit" class="btn btn-danger btn-sm">Đăng tin mới</a>
+          <a href="http://localhost:5000/packages/add-edit" class="btn btn-danger btn-sm"
+            >Thêm tin mới</a
+          >
           <!-- <div class="d-lg-none w-100">
                 <a class="btn btn-danger btn-block mt-3">Đăng tin mới</a>
               </div> -->
         </div>
       </div>
+
       <!--  -->
       <div class="d-md-block">
         <div class="table-responsive overflow-auto">
           <table class="table table_post_listing table-bordered table-hover">
             <thead>
               <tr>
-                <th>Mã tin</th>
-                <th style="text-align: center; white-space: nowrap">Ảnh đại diện</th>
-                <th>Tiêu đề</th>
+                <th>Mã gói</th>
+                <th style="text-align: center; white-space: nowrap">Tên gói</th>
+                <th style="text-align: center; white-space: nowrap">Mô tả</th>
                 <th>Giá</th>
-                <th style="white-space: nowrap">Ngày tạo</th>
-                <th style="white-space: nowrap">Trạng thái</th>
+                <th>Kích hoạt</th>
+                <th style="white-space: nowrap">Thời gian sử dụng</th>
+                <th style="white-space: nowrap">Chức năng</th>
               </tr>
             </thead>
-            <tbody id="postList"></tbody>
+            <tbody id="packageList"></tbody>
           </table>
         </div>
 
@@ -93,14 +97,13 @@
     </main>
   </div>
 </div>
-<template id="postTemplate">
-  <tr id="postItem">
+<template id="packageTemplate">
+  <tr id="packageItem">
     <td data-id="number">Mã tin</td>
-    <td data-id="image">
-      <img style="width: 70px; height: 70px; object-fit: cover" src="" class="img-thumbnail" />
-    </td>
-    <td data-id="title"></td>
+    <td data-id="name"></td>
+    <td data-id="description"></td>
     <td data-id="price"></td>
+    <td data-id="active"></td>
     <td data-id="date"></td>
     <td data-id="action">
       <button id="edit-btn" type="button" class="btn btn-sm btn-success">Edit</button>
@@ -108,11 +111,5 @@
     </td>
   </tr>
 </template>
-<script
-  src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/15.7.0/nouislider.min.js"
-  integrity="sha512-UOJe4paV6hYWBnS0c9GnIRH8PLm2nFK22uhfAvsTIqd3uwnWsVri1OPn5fJYdLtGY3wB11LGHJ4yPU1WFJeBYQ=="
-  crossorigin="anonymous"
-  referrerpolicy="no-referrer"
-></script>
-<script type="module" src="../../../js/post-list.js"></script>
+<script type="module" src="../../../js/package-list.js"></script>
 <%- include('../../partials/footerPanel'); %>
