--- a/src/views/signIn.ejs
+++ b/src/views/signIn.ejs
@@ -47,11 +47,9 @@
                     value=""
                     id="form2Example3"
                   />
-                  <label class="form-check-label" for="form2Example3">
-                    Remember me
-                  </label>
+                  <label class="form-check-label" for="form2Example3"> Remember me </label>
                 </div>
-                <a href="#!" class="text-body">Forgot password?</a>
+                <a href="forgot-password" class="text-body">Forgot password?</a>
               </div>
 
               <div class="text-center text-lg-start mt-4 pt-2">
