fix sidebar post views

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -137,9 +137,9 @@
         </div>
       </div>
     </div>
-    <section class="row justify-content-center gap-4">
+    <section class="row justify-content-center align-items-start">
       <div class="col-md-8 col-12"><%- include("./partials/post"); %></div>
-      <div class="col-md-3 col-12 d-none d-md-block">
+      <div class="col-md-4 col-12 d-none d-md-block">
         <%- include("./partials/sidebar"); %>
       </div>
     </section>
