--- a/src/views/partials/sidebar.ejs
+++ b/src/views/partials/sidebar.ejs
@@ -1,50 +1,52 @@
-<h3 class="fs-4">Bài Đăng Mới</h3>
-<% if (locals.postsNew) { %> <% postsNew.forEach(element => { %>
-<div class="row mb-2 p-2 bg-white rounded-3 justify-content-center">
-  <div class="col-md-4 card-top">
-    <img
-      src="<%- element.images[0]%>"
-      class="img-post"
-      style="object-fit: cover"
-      alt=""
-    />
-  </div>
-  <div class="col-md-8">
-    <h5 class="card-title text-primary fs-6 text-truncate">
-      <%- element.title %>
-    </h5>
-    <div class="card-rate">
-      <% if (element.isvip === "vip3") { %>
-      <div class="text-danger">
-        <i class="fa fas fa-star"></i>
-        <i class="fa fas fa-star"></i>
-        <i class="fa fas fa-star"></i>
-        <i class="fa fas fa-star"></i>
-        <i class="fa fas fa-star"></i>
-      </div>
-
-      <% } else if (element.isvip === "vip2") { %>
-      <div style="color: #ff8b13">
-        <i class="fa fas fa-star"></i>
-        <i class="fa fas fa-star"></i>
-        <i class="fa fas fa-star"></i>
-        <i class="fa fas fa-star"></i>
-      </div>
-
-      <% } else if (element.isvip === "vip1") { %>
-      <div class="text-warning">
-        <i class="fa fas fa-star"></i>
-        <i class="fa fas fa-star"></i>
-        <i class="fa fas fa-star"></i>
-      </div>
-
-      <% } %>
+<div class="bg-white p-3 rounded-3">
+  <h3 class="fs-5">Bài Đăng Mới</h3>
+  <% if (locals.postsNew) { %> <% postsNew.forEach(element => { %>
+  <div class="row mb-2 justify-content-center">
+    <div class="col-md-4 card-top">
+      <img
+        src="<%- element.images[0]%>"
+        class="img-post"
+        style="object-fit: cover"
+        alt=""
+      />
     </div>
-    <p class="card-price text-success fs-6">
-      <%= element.price.toLocaleString('vi-VN', { style: 'currency', currency:
-      'VND' }) %><span>/Tháng</span>
-    </p>
-  </div>
-</div>
+    <div class="col-md-8">
+      <h5 class="card-title text-primary fs-6 text-truncate">
+        <%- element.title %>
+      </h5>
+      <div class="card-rate">
+        <% if (element.isvip === "vip3") { %>
+        <div class="text-danger">
+          <i class="fa fas fa-star"></i>
+          <i class="fa fas fa-star"></i>
+          <i class="fa fas fa-star"></i>
+          <i class="fa fas fa-star"></i>
+          <i class="fa fas fa-star"></i>
+        </div>
 
-<% }) %> <% } %>
+        <% } else if (element.isvip === "vip2") { %>
+        <div style="color: #ff8b13">
+          <i class="fa fas fa-star"></i>
+          <i class="fa fas fa-star"></i>
+          <i class="fa fas fa-star"></i>
+          <i class="fa fas fa-star"></i>
+        </div>
+
+        <% } else if (element.isvip === "vip1") { %>
+        <div class="text-warning">
+          <i class="fa fas fa-star"></i>
+          <i class="fa fas fa-star"></i>
+          <i class="fa fas fa-star"></i>
+        </div>
+
+        <% } %>
+      </div>
+      <p class="card-price text-success fs-6">
+        <%= element.price.toLocaleString('vi-VN', { style: 'currency', currency:
+        'VND' }) %><span>/Tháng</span>
+      </p>
+    </div>
+  </div>
+
+  <% }) %> <% } %>
+</div>
