--- a/src/views/partials/post.ejs
+++ b/src/views/partials/post.ejs
@@ -1,6 +1,6 @@
 <div class="post-list">
   <% posts.forEach(function(post) { %>
-  <div class="row bg-white rounded-3 p-3 mt-2 align-items-start">
+  <div class="row bg-white rounded-3 p-3 mb-2 align-items-start">
     <div class="col-md-4">
       <img
         src="<%= post.images[0] %>"
