--- a/src/views/admin/posts/index.ejs
+++ b/src/views/admin/posts/index.ejs
@@ -76,8 +76,10 @@
                 <th>Mã tin</th>
                 <th style="text-align: center; white-space: nowrap">Ảnh đại diện</th>
                 <th>Tiêu đề</th>
+                <th>Chuyên mục</th>
                 <th>Giá</th>
                 <th style="white-space: nowrap">Ngày tạo</th>
+                <th style="white-space: nowrap">Đẩy tin</th>
                 <th style="white-space: nowrap">Trạng thái</th>
               </tr>
             </thead>
@@ -100,8 +102,12 @@
       <img style="width: 70px; height: 70px; object-fit: cover" src="" class="img-thumbnail" />
     </td>
     <td data-id="title"></td>
+    <td data-id="category"></td>
     <td data-id="price"></td>
     <td data-id="date"></td>
+    <td data-id="push">
+      <button class="btn btn-info"><i class="fas fa-bolt text-light"></i></button>
+    </td>
     <td data-id="action">
       <button id="edit-btn" type="button" class="btn btn-sm btn-success">Edit</button>
       <button id="remove-btn" type="button" class="btn btn-sm btn-danger">Remove</button>
