--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -17,8 +17,8 @@
             <i class="fas fa-gem me-3"></i>Phòng Trọ Siêu Đẹp
           </h6>
           <p>
-            Here you can use rows and columns to organize your footer content.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit
+            amet, consectetur adipisicing elit.
           </p>
         </div>
         <!-- Grid column -->
@@ -89,4 +89,3 @@
   </div>
   <!-- Copyright -->
 </footer>
-<!-- Footer -->
