--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,7 +9,7 @@
 
 body {
   background: white;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 .post-img {
@@ -67,7 +67,7 @@ body {
 
 .divider:after,
 .divider:before {
-  content: "";
+  content: '';
   flex: 1;
   height: 1px;
   background: #eee;
@@ -80,7 +80,6 @@ body {
     height: 100%;
   }
 }
-
 .img-post {
   width: 100%;
   height: 50px;
@@ -91,4 +90,11 @@ body {
   .img-post {
     height: 200px;
   }
+}
+
+.multi-line {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
 }
