--- a/src/views/forgot-password.ejs
+++ b/src/views/forgot-password.ejs
@@ -3,33 +3,23 @@
     <section class="vh-100">
       <div class="container-fluid h-custom">
         <div class="row d-flex justify-content-center align-items-center h-100">
-          <div class="col-md-9 col-lg-6 col-xl-5">
-            <img
-              src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp"
-              class="img-fluid"
-              alt="Sample image"
-            />
-          </div>
-          <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
+          <div class="col-12" style="width: 400px">
             <form id="reset-form" action="/forgot-password" method="post">
-              <div class="card text-center" style="width: 300px">
+              <div class="card text-center">
                 <div class="card-header h5 text-white bg-primary">Password Reset</div>
                 <div class="card-body px-5">
-                  <p class="card-text py-2">
-                    Enter your email address and we'll send you an email with instructions to reset
-                    your password.
-                  </p>
+                  <p class="card-text py-2">You can reset your password here.</p>
                   <div class="form-outline">
-                    <input type="email" name="email" class="form-control my-3" />
+                    <input
+                      type="email"
+                      name="email"
+                      placeholder="Enter your email"
+                      class="form-control mb-3"
+                    />
                     <div class="invalid text-danger"><% if (error) { %> <%= error %> <% } %></div>
                     <div class="invalid text-danger"></div>
-                    <label class="form-label" for="typeEmail">Email input</label>
                   </div>
                   <button type="submit" class="btn btn-primary w-100">Reset password</button>
-                  <div class="d-flex justify-content-between mt-4">
-                    <a class="" href="#">Login</a>
-                    <a class="" href="#">Register</a>
-                  </div>
                 </div>
               </div>
             </form>
