--- a/src/views/partials/sidebarPanel.ejs
+++ b/src/views/partials/sidebarPanel.ejs
@@ -230,7 +230,7 @@
     </a>
   </li>
   <li class="nav-item" id="navItemEditProfile">
-    <a class="nav-link text-dark" href="#">
+    <a class="nav-link text-dark" href="/profile">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         width="16"
