--- a/src/views/admin/payment/index.ejs
+++ b/src/views/admin/payment/index.ejs
@@ -4,13 +4,13 @@
 <!-- header -->
 
 <div id="dashboard" class="container-fluid">
-  <div class="row">
+  <div class="row flex-nowrap">
     <!-- sidebar -->
     <%- include('../../partials/sidebarPanel'); %>
     <!-- sidebar -->
 
     <!-- main -->
-    <main id="main" class="ms-sm-auto col-lg-10">
+    <main id="main" class="col-md-10 col-sm">
       <nav aria-label="breadcrumb" class="bg-gray p-3 rounded mb-2">
         <ol class="breadcrumb mb-0">
           <li class="breadcrumb-item"><a href="#">Phongtro123.com </a></li>
