--- a/src/views/edit-user.ejs
+++ b/src/views/edit-user.ejs
@@ -10,7 +10,7 @@
     <!-- sidebar -->
 
     <!-- main -->
-    <main id="main" class="ms-sm-auto col-lg-10">
+    <main id="main" class="col-md-10 col-sm">
       <nav aria-label="breadcrumb " class="bg-gray p-3 rounded mb-2">
         <ol class="breadcrumb mb-0">
           <li class="breadcrumb-item"><a href="#">Phongtro123.com </a></li>
@@ -30,9 +30,7 @@
 
       <form class="" action="#" method="POST">
         <div class="mb-3 row mt-5">
-          <label class="col-md-2 offset-md-2 col-form-label"
-            >Mã thành viên</label
-          >
+          <label class="col-md-2 offset-md-2 col-form-label">Mã thành viên</label>
           <div class="col-md-6">
             <input
               type="text"
@@ -44,9 +42,7 @@
           </div>
         </div>
         <div class="mb-3 row">
-          <label class="col-md-2 offset-md-2 col-form-label"
-            >Số điện thoại</label
-          >
+          <label class="col-md-2 offset-md-2 col-form-label">Số điện thoại</label>
           <div class="col-md-6">
             <input
               type="phone"
@@ -59,9 +55,7 @@
           </div>
         </div>
         <div class="mb-3 row">
-          <label class="col-md-2 offset-md-2 col-form-label"
-            >Tên hiển thị</label
-          >
+          <label class="col-md-2 offset-md-2 col-form-label">Tên hiển thị</label>
           <div class="col-md-6">
             <input type="text" class="form-control" name="name" value="tuan" />
           </div>
@@ -81,9 +75,7 @@
         </div>
 
         <div class="mb-3 row mt-5">
-          <label class="col-md-2 offset-md-2 col-form-label"
-            >Ảnh đại diện</label
-          >
+          <label class="col-md-2 offset-md-2 col-form-label">Ảnh đại diện</label>
           <div class="col-md-6">
             <div>
               <input type="file" class="" />
