--- a/src/views/admin/categories/add-edit.ejs
+++ b/src/views/admin/categories/add-edit.ejs
@@ -15,7 +15,7 @@
         <ol class="breadcrumb mb-0">
           <li class="breadcrumb-item"><a href="#">Phongtro123.com </a></li>
           <li class="breadcrumb-item"><a href="#">Quản lí</a></li>
-          <li class="breadcrumb-item active">Danh sách gói tin</li>
+          <li class="breadcrumb-item active">Danh sách chuyên mục</li>
         </ol>
       </nav>
 
@@ -23,7 +23,7 @@
       <div
         class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom"
       >
-        <h1 class="h2">Thêm sửa Gói tin</h1>
+        <h1 class="h2">Thêm sửa chuyên mục</h1>
       </div>
 
       <!--  -->
@@ -31,7 +31,7 @@
       <!-- .form new post -->
 
       <form
-        id="packageForm"
+        id="categoryForm"
         method="post"
         action="/quan-ly/posts"
         enctype="multipart/form-data"
@@ -45,33 +45,11 @@
               </div>
             </div>
             <div class="form-group row">
-              <label class="col-md-12 col-form-label">Tên gói</label>
+              <label class="col-md-12 col-form-label">Tên chuyên mục</label>
               <div class="col-md-12">
-                <input name="name" type="text" class="form-control" />
+                <input name="title" type="text" class="form-control" />
               </div>
             </div>
-            <div class="form-group row">
-              <label class="col-md-12 col-form-label"
-                >Thời gian sử dụng của gói dịch vụ (tính bằng ngày)</label
-              >
-              <div class="col-md-12">
-                <input name="duration" type="number" class="form-control" />
-              </div>
-            </div>
-            <div class="form-group row">
-              <label class="col-md-12 col-form-label">Giá</label>
-              <div class="col-md-12">
-                <input name="price" type="text" class="form-control" />
-              </div>
-            </div>
-            <div class="form-group row">
-              <label class="col-md-12 col-form-label">Nội dung mô tả</label>
-              <div class="col-md-12">
-                <textarea name="description" class="form-control" rows="9"></textarea>
-                <div class="invalid-feedback"></div>
-              </div>
-            </div>
-
             <div class="form-group row mt-5">
               <div class="col-md-12">
                 <button type="submit" class="btn btn-primary mb-5 btn-lg w-100">
@@ -88,6 +66,6 @@
     <!-- main -->
   </div>
 </div>
-<script defer type="module" src="../../../js/add-edit-package.js"></script>
+<script defer type="module" src="../../../js/add-edit-category.js"></script>
 
 <%- include('../../partials/footerPanel'); %>
