--- a/src/views/admin/categories/index.ejs
+++ b/src/views/admin/categories/index.ejs
@@ -1,12 +1,12 @@
 <%- include('../../partials/head'); %>
 <!-- header -->
 <header><%- include('../../partials/header'); %></header>
-<!-- header -->
 
 <div id="dashboard" class="container-fluid">
   <div class="row flex-nowrap">
     <!-- sidebar -->
     <%- include('../../partials/sidebarPanel'); %>
+
     <!-- sidebar -->
 
     <!-- main -->
@@ -15,52 +15,52 @@
         <ol class="breadcrumb mb-0">
           <li class="breadcrumb-item"><a href="#">Phongtro123.com </a></li>
           <li class="breadcrumb-item"><a href="#">Quản lí</a></li>
-          <li class="breadcrumb-item active">Danh gói tin</li>
+          <li class="breadcrumb-item active">Danh sách Chuyên mục</li>
         </ol>
       </nav>
 
       <div
         class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom"
       >
-        <h3 class="h3">Lịch sử nạp tiền</h3>
-      </div>
-
-      <!--  -->
-      <div class="d-md-block">
+        <h3 class="h3">Quản lý chuyên mục</h3>
+    <a href="http://localhost:5002/categories/add-edit" class="btn btn-danger btn-sm">Tạo chuyên mục mới</a>
+       
+  
+  </div>
+   <div class="d-md-block">
         <div class="table-responsive overflow-auto">
           <table class="table table_post_listing table-bordered table-hover">
             <thead>
               <tr>
-                <th>Ngày mua</th>
-                <th style="text-align: center; white-space: nowrap">Mã giao dịch</th>
-                <th style="text-align: center; white-space: nowrap"></th>
-                Tên gói
-                <th style="text-align: center; white-space: nowrap">Số tiền</th>
-                <th>Trạng thái</th>
-                <th>Ghi chú</th>
+                <th>Mã tin</th>
+                <th>Tiêu đề</th>
+                <th style="white-space: nowrap">Ngày tạo</th>
+                <th style="white-space: nowrap">Thao tác</th>
               </tr>
             </thead>
-            <tbody id="depositList"></tbody>
+            <tbody id="categoryList"></tbody>
           </table>
         </div>
 
-        <!-- end pagination -->
       </div>
-      <nav>
-        <ul id="pagination" class="pagination justify-content-center"></ul>
-      </nav>
+      </div>
+
+      <!--  -->
+     
+       
     </main>
   </div>
 </div>
-<template id="depositTemplate">
-  <tr id="depositItem">
+<template id="categoryTemplate">
+  <tr id="categoryItem">
+    <td data-id="number">Số thứ tự</td>
+    <td data-id="title"></td>
     <td data-id="date"></td>
-    <td data-id="code"></td>
-    <td data-id="name"></td>
-    <td data-id="price"></td>
-    <td data-id="status"></td>
-    <td data-id="note"></td>
+    <td data-id="action" class="text-center">
+      <button id="edit-btn" type="button" class="btn btn-sm btn-success">Edit</button>
+      <button id="remove-btn" type="button" class="btn btn-sm btn-danger">Remove</button>
+    </td>
   </tr>
 </template>
-<script type="module" src="../../../js/deposit-list.js"></script>
+<script type="module" src="../../../js/category-list.js"></script>
 <%- include('../../partials/footerPanel'); %>
