--- a/src/views/admin/packages/index.ejs
+++ b/src/views/admin/packages/index.ejs
@@ -4,13 +4,13 @@
 <!-- header -->
 
 <div id="dashboard" class="container-fluid">
-  <div class="row">
+  <div class="row flex-nowrap">
     <!-- sidebar -->
     <%- include('../../partials/sidebarPanel'); %>
     <!-- sidebar -->
 
     <!-- main -->
-    <main id="main" class="ms-sm-auto col-lg-10">
+    <main id="main" class="col-md-10 col-sm">
       <nav aria-label="breadcrumb" class="bg-gray p-3 rounded mb-2">
         <ol class="breadcrumb mb-0">
           <li class="breadcrumb-item"><a href="#">Phongtro123.com </a></li>
@@ -25,42 +25,7 @@
         <h3 class="h3">Quản lý gói tin</h3>
 
         <div class="btn-toolbar mb-2 mb-md-0">
-          <div class="dropdown me-1">
-            <button
-              class="btn btn-outline-secondary dropdown-toggle btn-sm"
-              type="button"
-              id="dropdownMenuButton"
-              data-bs-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
-            >
-              Lọc theo loại VIP
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-              <a class="dropdown-item">Tin Hot</a>
-              <a class="dropdown-item">Tin VIP 30</a>
-              <a class="dropdown-item">Tin VIP 20</a>
-              <a class="dropdown-item">Tin VIP 10</a>
-              <a class="dropdown-item">Tin thường</a>
-            </div>
-          </div>
-          <div class="dropdown me-1">
-            <button
-              class="btn btn-outline-secondary dropdown-toggle btn-sm"
-              type="button"
-              id="dropdownMenuButton"
-              data-bs-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
-            >
-              Lọc theo trạng thái
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-              <a class="dropdown-item">Tin đang hiển thị</a>
-              <a class="dropdown-item">Tin hết hạn</a>
-              <a class="dropdown-item">Tin đang ẩn</a>
-            </div>
-          </div>
+        
           <a href="http://localhost:5000/packages/add-edit" class="btn btn-danger btn-sm"
             >Thêm tin mới</a
           >
