--- a/src/views/admin/posts/index.ejs
+++ b/src/views/admin/posts/index.ejs
@@ -4,13 +4,13 @@
 <!-- header -->
 
 <div id="dashboard" class="container-fluid">
-  <div class="row">
+  <div class="row flex-nowrap">
     <!-- sidebar -->
     <%- include('../../partials/sidebarPanel'); %>
     <!-- sidebar -->
 
     <!-- main -->
-    <main id="main" class="ms-sm-auto col-lg-10">
+    <main id="main" class="col-md-10 col-sm">
       <nav aria-label="breadcrumb" class="bg-gray p-3 rounded mb-2">
         <ol class="breadcrumb mb-0">
           <li class="breadcrumb-item"><a href="#">Phongtro123.com </a></li>
@@ -22,52 +22,26 @@
       <div
         class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom"
       >
-        <h3 class="h3">Quản lý tin đăng</h3>
+        <h3 class="h3 me-2">Quản lý tin đăng</h3>
+        <div class="form-group me-auto  d-flex align-items-center gap-3">
+          <input
+            style="width: 180px"
+            type="text"
+            name="title"
+            class="form-control"
+            placeholder="Search tên bài viết"
+          />
 
-        <div class="btn-toolbar mb-2 mb-md-0">
-          <div class="dropdown me-1">
-            <button
-              class="btn btn-outline-secondary dropdown-toggle btn-sm"
-              type="button"
-              id="dropdownMenuButton"
-              data-bs-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
-            >
-              Lọc theo loại VIP
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-              <a class="dropdown-item">Tin Hot</a>
-              <a class="dropdown-item">Tin VIP 30</a>
-              <a class="dropdown-item">Tin VIP 20</a>
-              <a class="dropdown-item">Tin VIP 10</a>
-              <a class="dropdown-item">Tin thường</a>
-            </div>
-          </div>
-          <div class="dropdown me-1">
-            <button
-              class="btn btn-outline-secondary dropdown-toggle btn-sm"
-              type="button"
-              id="dropdownMenuButton"
-              data-bs-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
-            >
-              Lọc theo trạng thái
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-              <a class="dropdown-item">Tin đang hiển thị</a>
-              <a class="dropdown-item">Tin hết hạn</a>
-              <a class="dropdown-item">Tin đang ẩn</a>
-            </div>
-          </div>
-          <a href="http://localhost:5000/posts/add-edit" class="btn btn-danger btn-sm"
-            >Đăng tin mới</a
-          >
-          <!-- <div class="d-lg-none w-100">
-                <a class="btn btn-danger btn-block mt-3">Đăng tin mới</a>
-              </div> -->
+          <select name="category" class="form-control">
+            <option value="">Tất cả chuyên mục</option>
+          </select>
         </div>
+
+        <a
+          href="http://localhost:5002/posts/add-edit"
+          class="btn btn-danger btn-sm text-center mt-2 align-self-md-stretch"
+          >Đăng tin mới</a
+        >
       </div>
       <!--  -->
       <div class="d-md-block">
