--- a/src/views/create-category.ejs
+++ b/src/views/create-category.ejs
@@ -10,7 +10,7 @@
     <!-- sidebar -->
 
     <!-- main -->
-    <main id="main" class="ms-sm-auto col-lg-10">
+    <main id="main" class="col-md-10 col-sm">
       <nav aria-label="breadcrumb " class="bg-gray p-3 rounded mb-2">
         <ol class="breadcrumb mb-0">
           <li class="breadcrumb-item"><a href="#">Phongtro123.com </a></li>
@@ -26,10 +26,9 @@
         <h1 class="h2">Đăng tin mới</h1>
       </div>
       <p class="alert alert-danger mb-5" role="alert">
-        Nếu bạn đã từng đăng tin trên Phongtro123.com, hãy sử dụng chức năng ĐẨY
-        TIN / GIA HẠN / NÂNG CẤP VIP trong mục QUẢN LÝ TIN ĐĂNG để làm mới, đẩy
-        tin lên cao thay vì đăng tin mới. Tin đăng trùng nhau sẽ không được
-        duyệt.
+        Nếu bạn đã từng đăng tin trên Phongtro123.com, hãy sử dụng chức năng ĐẨY TIN / GIA HẠN /
+        NÂNG CẤP VIP trong mục QUẢN LÝ TIN ĐĂNG để làm mới, đẩy tin lên cao thay vì đăng tin mới.
+        Tin đăng trùng nhau sẽ không được duyệt.
       </p>
 
       <!--  -->
@@ -49,9 +48,7 @@
             </div>
             <div class="form-group row mt-5">
               <div class="col-md-12">
-                <button type="submit" class="btn btn-success mb-5 btn-lg w-100">
-                  Tiếp tục
-                </button>
+                <button type="submit" class="btn btn-success mb-5 btn-lg w-100">Tiếp tục</button>
               </div>
             </div>
           </div>
@@ -72,11 +69,7 @@
             <!-- note -->
             <div
               class="card"
-              style="
-                color: #856404;
-                background-color: #fff3cd;
-                border-color: #ffeeba;
-              "
+              style="color: #856404; background-color: #fff3cd; border-color: #ffeeba"
             >
               <div class="card-body">
                 <h4 class="card-title">Lưu ý khi đăng tin</h4>
@@ -88,18 +81,15 @@
                     Tiêu đề tin không dài quá 100 kí tự
                   </li>
                   <li style="list-style-type: square; margin-left: 15px">
-                    Các bạn nên điền đầy đủ thông tin vào các mục để tin đăng có
-                    hiệu quả hơn.
+                    Các bạn nên điền đầy đủ thông tin vào các mục để tin đăng có hiệu quả hơn.
                   </li>
                   <li style="list-style-type: square; margin-left: 15px">
-                    Để tăng độ tin cậy và tin rao được nhiều người quan tâm hơn,
-                    hãy sửa vị trí tin rao của bạn trên bản đồ bằng cách kéo
-                    icon tới đúng vị trí của tin rao.
+                    Để tăng độ tin cậy và tin rao được nhiều người quan tâm hơn, hãy sửa vị trí tin
+                    rao của bạn trên bản đồ bằng cách kéo icon tới đúng vị trí của tin rao.
                   </li>
                   <li style="list-style-type: square; margin-left: 15px">
-                    Tin đăng có hình ảnh rõ ràng sẽ được xem và gọi gấp nhiều
-                    lần so với tin rao không có ảnh. Hãy đăng ảnh để được giao
-                    dịch nhanh chóng!
+                    Tin đăng có hình ảnh rõ ràng sẽ được xem và gọi gấp nhiều lần so với tin rao
+                    không có ảnh. Hãy đăng ảnh để được giao dịch nhanh chóng!
                   </li>
                 </ul>
               </div>
