--- a/src/views/partials/sidebarPanel-copy.ejs
+++ b/src/views/partials/sidebarPanel-copy.ejs
@@ -249,7 +249,7 @@
     </a>
   </li>
   <li class="nav-item" id="navItemCategories">
-    <a class="nav-link text-dark" href="/quan-ly/categories">
+    <a class="nav-link text-dark" href="http://localhost:5002/categories">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         width="16"
